fix for MLK bug 15818, every ImageURLImpl leaks.r=pnunn, a=chofmann.